# sibr-api

./: .gitignore  pyproject.toml  readme.md
src/sibr_api/: __init__.py  base.py
tests/: test_base.py
