[project]
name = "sibr-api"
version = "0.1.0"
description = ""
authors = [
    {name = "sigvardbratlie",email = "sigvard.bratlie@gmail.com"}
]
readme = "README.md"
license = { text = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
