[tool.poetry]
name = "sibr-api"
version = "0.1.9"
description = "A base class for building robust, asynchronous API clients."
authors = ["sigvardbratlie <sigvard.bratlie@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{include = "sibr_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
aiohttp = ">=3.12.15,<4.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pandas = ">=2.3.2,<3.0.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
aresponses = "^3.0.0"

[tool.poetry.group.dev.dependencies]
notebook = ">=7.4.5,<8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"